--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="main-container">
-  <!-- <header>
+  <header>
     <img src="assets\images\logo.svg" alt="Logo">
 
     <nav>
@@ -28,7 +28,7 @@
         <li><a href="#">Categories</a></li>
       </ul>
     </nav>
-  </header> -->
+  </header>
   
   <main class="container">
       <div class="image">
