--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
   <div class="main-container">
   <header>
     <img src="assets\images\logo.svg" alt="Logo">
-
+    
     <nav>
+      <!-- <label for="checkbox" id="menu"></label>
+    <input type="checkbox" class="checkbox" id="checkbox"> -->
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">New</a></li>
@@ -28,6 +30,7 @@
         <li><a href="#">Categories</a></li>
       </ul>
     </nav>
+    
   </header>
   
   <main class="container">
